--- a/eeioa_jm.ipynb
+++ b/eeioa_jm.ipynb
@@ -103,6 +103,7 @@
     }
    ],
    "source": [
+    "# split data urban/rural\n",
     "data_urban = data[data[\"urbanity\"] == \"urban\"]\n",
     "data_urban = data_urban[[\"country_code\", \"country\", \"sector\", \"all\"]]\n",
     "data_rural = data[data[\"urbanity\"] == \"rural\"]\n",
@@ -410,6 +411,7 @@
     }
    ],
    "source": [
+    "# sum repeated WB categories to match EORA\n",
     "all_urban = data_urban.groupby(['country_code', 'sector'])['all'].sum()\n",
     "all_urban = pd.DataFrame(all_urban)\n",
     "all_urban.index.name = 'sector'\n",
@@ -995,7 +997,7 @@
     }
    ],
    "source": [
-    "## RENAME WB CONSUMPTION CATEGORIES USING CONCORDANCE TABLE\n",
+    "## REPEAT PROCESS FOR RURAL CONSUMPTION ##\n",
     "data_rural = data_rural[data_rural.sector != \"Alsectors\"]\n",
     "data_rural = data_rural.replace(to_replace =\"Foodandbeverages\", value =\"Food & Beverages\")\n",
     "data_rural = data_rural.replace(to_replace =\"Clothingandfootwear\", value =\"Textiles and Wearing Apparel\")\n",
